# trends.earth-CLI

./: .gitignore  .pre-commit-config.yaml  .tecli.yml.example  README.md  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md  copilot-setup-steps.md  copilot-setup-steps.yml
.github/workflows/: ci.yaml  copilot-setup-steps.yml  ruff.yaml
examples/example_gee/src/: main.py
examples/example_gee_ci/src/: main.py
examples/example_gee_queue/: requirements.txt
examples/example_gee_queue/src/: main.py
examples/example_numpy/: configuration.json
examples/example_numpy/src/: main.py
examples/example_tensorflow/: requirements.txt
examples/example_tensorflow/src/: main.py
tecli/: __init__.py  __main__.py  auth.py  clear.py  commands.py  config.py  create.py  download.py  info.py  login.py  logout.py  logs.py  publish.py  start.py
tecli/run/: Dockerfile
tests/: __init__.py  test_basic.py  test_commands.py
